refactor: collect(Collectors.toList())를 toList()로 간결하게 변경